--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body {
@@ -13,4 +14,5 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Dosis Variable', sans-serif;
+    min-width: 100vh;
 }
